wspacing fix?

--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ h2 { /* Making all the question wrap nicely instead of underneath the question n
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 100px;
-    max-width: 1000px;   /* limits width */
-    margin: 0 auto;     /* centers horizontally */
-    line-height: 1.3;
+    gap: 80px;
+    max-width: 3000px;   /* limits width */
+    margin: 0 auto;     /* centres horizontally */
+    line-height: 1.5;
     padding: 20px;
 }
 
@@ -64,23 +64,31 @@ p {
 }
 
 section {
-    margin-bottom: 60px;
+    margin-bottom: 20px;
     padding: 25px;
     border-radius: 10px;
     background-color: #1e293b;
 }
 
 .answer {
-    margin-left: 20px; /* Indent all the answers by 40 pixels */
+    margin-left: 20px; /* Indent all the answers by 20 pixels */
     padding-left: 20px;
     border-left: 2px solid rgba(148, 163, 184, 0.3);
 }
 
 ul li { /* Fixing spacing between each list item to improve readability*/
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 footer { /*Making the footer empty. Making the page look a bit more polished*/
     min-height: 90px;              /* Height of the footer */
 }
 
+.two-columns {
+    columns: 2;        /* splits my dot points into two columns */
+    column-gap: 40px;  /* gap between my columns */
+}
+
+section.ignore-grid {
+    grid-column: 1 / -1;
+}
